made more progress on madlibs

--- a/templates/game.html
+++ b/templates/game.html
@@ -29,7 +29,25 @@
         <option value="unique">Unique</option>
         <option value="hideous">Hideous</option>
     </select>
-    
+    Input a building type.
+    <label>Building</label>
+    <input type="text" name="building">
+
+    <input type = "radio" name = "place" value = "the ocean">
+        <label>The Ocean</label>
+        <input type = "radio" name = "place" value = "New York city">
+        <label>New York city</label>
+         <input type = "radio" name = "place" value = "Narnia">
+        <label>Narnia</label>
+
+    <input type = "checkbox" name = "animals" value = "dragons">
+    <label>Dragons</label>
+    <input type = "checkbox" name = "animals" value = "dolphins">
+    <label>Dolphins</label>
+    <input type = "checkbox" name = "animals" value = "parrots">
+    <label>Parrots</label>
+
     <input type ="submit">
+</form>
 </body>
 </html>
